# claude-test-project-

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  alembic.ini  claude_desktop_config.json  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  data.md  queries.md
Data/: applicants.csv  employment.csv  loans.csv
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: init_db.sql
src/loan_api/: chat.py  config.py  db.py  ingest.py  main.py  models.py  schemas.py  sql_safety.py  tools.py
src/loan_api/routes/: ingest.py  sql.py  tables.py
src/loan_api/static/: app.js  index.html
src/loan_mcp/: client.py  server.py
tests/: conftest.py  test_ingest.py  test_sql_safety.py
